--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: CI
-on: [push]
+on:
+  workflow_dispatch:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  # schedule:
+    # - cron:  '0 0,6,12,18 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
